# dmarc-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RUNBOOK.md  SETUP.md  automation-workflow.md  dmarc-parser.md  dns-fetcher.md  report-generator.md  requirements.txt  spf-validator.md
backend/: .env.example  emailer.py  main.py  models.py  requirements.txt  scanner.py
config/: domains.json
dmarc_agent/: cli.py  dkim_checker.py  dmarc_analyzer.py  models.py  report_json.py  report_parser.py  report_text.py  spf_validator.py
dmarc_agent_src/: pyproject.toml
dmarc_agent_src/dmarc_agent/: __init__.py  dns_fetcher.py  exceptions.py  risk_classifier.py
frontend/: index.html  pricing.html  results.html  success.html
frontend/assets/: app.js  style.css
n8n/: README.md  workflow-1-scheduled-scan.json  workflow-2-report-ingestion.json  workflow-3-on-demand-analysis.json  workflow-4-alerts.json  workflow-5-batch-analysis.json
src/dmarc_agent/: api_server.py  record_generator.py  report_html.py
src/tests/: conftest.py  helpers.py  test_api_server.py  test_cli.py  test_dkim_checker.py  test_dmarc_analyzer.py  test_record_generator.py  test_report_parser.py  test_risk_classifier.py  test_spf_validator.py
workflows/: 01-scheduled-domain-scan.json  02-dmarc-report-ingestion.json  03-on-demand-analysis.json  04-alert-notification.json  05-batch-analysis.json
workflows/config/: domains.json
