[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmarc-agent"
version = "0.1.0"
description = "Email authentication analysis CLI — SPF, DKIM, DMARC"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "dnspython>=2.6",
    "rich>=13.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
dmarc-agent = "dmarc_agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["dmarc_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
